# QuickNote-for-macOS

./: .gitignore  DEPLOYMENT.md  INSTALL.md  LICENSE  README.md  README.zh-TW.md  SIMPLE-INSTALL.md  auto-resign.sh  index.html  install.sh  package-lock.json  package.json  setup-auto-resign.sh  sign-app.sh  vite.config.ts
.github/workflows/: deploy.yml
QuickNote-Install/: README.txt  quick-install.sh
QuickNote-Install-Package/: README.txt  install.sh
QuickNote-mirror/: config  packed-refs
QuickNote-mirror/info/: refs
QuickNote-mirror/objects/info/: commit-graph  packs
QuickNote-mirror/objects/pack/: pack-c5c24117ef6b3c9041badb2d3cb83c25cf100721.bitmap  pack-c5c24117ef6b3c9041badb2d3cb83c25cf100721.idx  pack-c5c24117ef6b3c9041badb2d3cb83c25cf100721.pack  pack-c5c24117ef6b3c9041badb2d3cb83c25cf100721.rev
public/: robots.txt  sitemap.xml
src/: App.vue  i18n.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  menu.rs  shortcuts.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  settings_commands.rs
src/assets/: styles.css
src/components/: EditorArea.vue  SettingsModal.vue  StatusBar.vue  TabBar.vue
src/locales/: en.json  zh-TW.json
src/stores/: settings.ts  tabs.ts
