[package]
name = "QuickNote"
version = "0.1.0"
description = "A simple, fast, and lightweight note-taking application designed for quick access and ease of use."
authors = ["kaigii <ken940702@gmail.com>"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quick_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "window-unminimize", "window-show", "window-maximize", "window-close", "window-hide", "window-unmaximize", "window-start-dragging", "window-minimize", "window-set-fullscreen", "macos-private-api", "global-shortcut-all", "dialog-all", "shell-open", "fs-read-file", "fs-write-file", "dialog", "global-shortcut", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
lazy_static = "1.4"
cocoa = "0.26.1"
objc = "0.2.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

